--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
 		<link href="https://fonts.googleapis.com/css?family=Mallanna" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<link rel = "stylesheet" href="styles/animate.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src = "js/main.js"></script>
 	</head>
 	<body>
 		<div class = "container" style = "background-color: #84ba4d">
 			<img id = "status-bar" src = "images/Status Bar.png">
 			<div class = "logo">
 				<img id = "hold-the-logo" src = "images/Full Logo.png">
+				<img id = "bacon" src = "images/food/Bacon.png">
+				<img id = "bread" src = "images/food/Bread.png">
+				<img id = "cheese" src = "images/food/Cheese.png">
+				<img id = "egg" src = "images/food/Egg.png">
+				<img id = "milk" src = "images/food/Milk.png">
+				<img id = "peanuts" src = "images/food/Peanuts.png">
+				<img id = "pepper" src = "images/food/Pepper.png">
+				<img id = "tomatoes" src = "images/food/Tomatoes.png">
 			</div>
 			<form>
 				<div class="input-container">
