Finished dashboard and added demo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img id = "pepper" src = "images/food/Pepper.png">
 			<img id = "tomatoes" src = "images/food/Tomatoes.png">
 		</div>
-		<form action = "dashboard.html" onClick = "slideLeft()">
+		<form action = "dashboard.html">
 			<div class="input-container">
 				<img id = "email-icon" src = "images/Envelope.png">
 			  	<input type = "email" name = "email" placeholder = "Email Address">
