--- a/dashboard.html
+++ b/dashboard.html
@@ -9,43 +9,58 @@
 		<script src = "js/main.js"></script>
 	</head>
 	<body>
-		<img id = "status-bar" src = "images/Status Bar.png">
 		<div class = "header">
-			<img id = "hold-the-word" src = "images/Hold the... Word.png">
-			<img id = "profile-icon" src = "images/Profile.png">
+			<img id = "status-bar" src = "images/Status Bar.png">
+			<div class = "top-bar">
+				<img id = "hold-the-word" src = "images/Hold the... Word.png">
+				<img id = "profile-icon" src = "images/Profile.png">
+			</div>
 		</div>
-		<div class = "welcome">
-			<h3>Hello Dale Lewis!</h3>
-			<h3>Let's create something tasty together!</h3>
+		<div class = "content" style = "height: 590px;">
+			<div class = "welcome">
+				<h3>Hello Dale Lewis!</h3>
+				<h3>Let's create something tasty together!</h3>
+			</div>
+			<div class = "recommendations">
+				<h2>Recommendations</h3>
+				<div class = "recipes">
+					<div class="recipe-container">
+			        	<img class = "recipe-image" src="images/recipes/Avocado Carbonara.png">
+			        	<img class = "heart-outline" src = "images/Outline Heart.png">
+			       		<h5>Avocado Carbonara</h5>
+			    	</div>
+			    	<div class="recipe-container">
+			        	<img class = "recipe-image" src="images/recipes/Carnitas Tacos.png">
+			        	<img class = "heart-outline" src = "images/Outline Heart.png">
+			       		<h5>Carnitas Tacos</h5>
+			    	</div>
+			    	<div class="recipe-container">
+			        	<img class = "recipe-image" src="images/recipes/Swedish Meatballs.png">
+			        	<img class = "heart-outline" src = "images/Outline Heart.png">
+			       		<h5>Swedish Meatballs</h5>
+			    	</div>
+			    	<div class="recipe-container">
+			        	<img class = "recipe-image" src="images/recipes/Mac and Cheese.png">
+			        	<img class = "heart-outline" src = "images/Outline Heart.png">
+			       		<h5>Mac and Cheese</h5>
+			    	</div>
+			    </div>
+			</div>
 		</div>
-		<div class = "recommendations">
-			<h2>Recommendations</h3>
-			<div class = "recipes">
-				<div class="recipe-container">
-		        	<img class = "recipe-image" src="images/recipes/Avocado Carbonara.png">
-		        	<img class = "heart-outline" src = "images/Outline Heart.png">
-		       		<h5>Avocado Carbonara</h5>
-		    	</div>
-		    	<div class="recipe-container">
-		        	<img class = "recipe-image" src="images/recipes/Carnitas Tacos.png">
-		        	<img class = "heart-outline" src = "images/Outline Heart.png">
-		       		<h5>Carnitas Tacos</h5>
-		    	</div>
-		    	<div class="recipe-container">
-		        	<img class = "recipe-image" src="images/recipes/Swedish Meatballs.png">
-		        	<img class = "heart-outline" src = "images/Outline Heart.png">
-		       		<h5>Swedish Meatballs</h5>
-		    	</div>
-		    	<div class="recipe-container">
-		        	<img class = "recipe-image" src="images/recipes/Mac and Cheese.png">
-		        	<img class = "heart-outline" src = "images/Outline Heart.png">
-		       		<h5>Mac and Cheese</h5>
-		    	</div>
-		    </div>
-		</div>
-		<div class = "tab-bar">
-			<!-- <img id = "hold-the-word" src = "images/Hold the... Word.png">
-			<img id = "profile-icon" src = "images/Profile.png"> -->
+		<div class="tab-bar">
+		  <a href="dashboard.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Home - Green.png">
+	        	<h5 style = "color: #84ba4d;">Home</h5>
+	    	</div>
+	    	</a>
+		  <a href="recipes.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Utensils.png">
+	        	<h5>Recipes</h5>
+	    	</div></a>
+		  <a href="saved.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Heart.png">
+	        	<h5>Saved</h5>
+	    	</div></a>
 		</div>
 	</body>
 </html>
