--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 	<head>
 		<title>Hold the...</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+		<link rel="icon" href="images/Plate.png">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<link rel = "stylesheet" href="styles/animate.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src = "js/main.js"></script>
 	</head>
 	<body style = "background-color: #84ba4d">
-		<img id = "status-bar" src = "images/Status Bar.png">
+		<img id = "status-bar" style = "background-color: transparent;
+	opacity: 1;" src = "images/top/Status Bar.png">
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
 			<img id = "bacon" src = "images/food/Bacon.png">
