--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hold the... Demo</title>
+		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<link rel = "stylesheet" href="styles/animate.css">
