--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<title>Hold the... Demo</title>
+		<meta property="og:image" content="images/Plate.png" />
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
