--- a/recipes.html
+++ b/recipes.html
@@ -13,9 +13,11 @@
 		<div class="header">
 			<img id = "status-bar" src = "images/top/Status Bar.png">
 			<div class="top-bar">
-		  		<div class="top-container">
-		  			<img id = "filter-icon" src="images/Filter.png">
-		  		</div>
+		  		<a href = "filters.html">
+			  		<div class="top-container">
+			  			<img id = "filter-icon" src="images/Filter.png">
+			  		</div>
+			  	</a>
 		  		<div class="top-container">
 	        		<h1>Recipes</h1>
 		    	</div>
