--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
+<html>
 	<head>
 		<title>Hold the... Demo</title>
 		<meta property="og:image" content="images/Plate.png" />
+		<<!-- meta property="og:url" content="http://www.coachesneedsocial.com/coacheswisdomtelesummit/" /> -->
+		<meta property="og:title" content="Hold the... Demo" />
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
