--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title>Hold the... Demo</title>
-		<meta property="og:image" content="images/Plate.png" />
-		<meta property="og:title" content="Hold the... Demo" />
+		<meta property="og:image" content="https://gilberk1.github.io/hold-the-prototype/images/Plate.png" />
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
