Create transition of pages

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src = "js/main.js"></script>
 	</head>
-	<body style = "background-color: #84ba4d">
-		<img id = "status-bar" style = "background-color: transparent;
-	opacity: 1;" src = "images/top/Status Bar.png">
+	<body class = "green" onLoad = "baconFade();">
+		<img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png">
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
 			<img id = "bacon" src = "images/food/Bacon.png">
@@ -44,8 +43,8 @@
 			<img id = "google-sign-in" src = "images/Google Login.png">
 		</div>
 		<div id = "password-sign-up">
-			<h4 style = "float:left">Forgot Password?</h4>
-			<h4 style = "float:right">New Here? Sign Up!</h4>
+			<h4 class = "password-float">Forgot Password?</h4>
+			<h4 class = "sign-up-float">New Here? Sign Up!</h4>
 		</div>
 	</body>
 </html>
