profile lifestyle animation finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src = "js/main.js"></script>
 	</head>
-	<body class = "green" onLoad = "baconFade();">
+	<body class = "green-background" onLoad = "baconFade();">
 		<img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png">
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
@@ -31,7 +31,7 @@
 				<img id = "password-icon" src = "images/Lock.png">
 			  	<input type = "password" name = "password" placeholder = "Password">
 			</div>
-			<button id = "sign-in-button" type = "submit">SIGN IN</button>
+			<button class = "submit" type = "submit">SIGN IN</button>
 		</form>
 		<fieldset class="or-line">
 		    <legend> or </legend>
@@ -43,8 +43,8 @@
 			<img id = "google-sign-in" src = "images/Google Login.png">
 		</div>
 		<div id = "password-sign-up">
-			<h4 class = "password-float">Forgot Password?</h4>
-			<h4 class = "sign-up-float">New Here? Sign Up!</h4>
+			<h4 class = "left-float">Forgot Password?</h4>
+			<h4 class = "right-float">New Here? Sign Up!</h4>
 		</div>
 	</body>
 </html>
