--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Hold the...</title>
 		<link rel="icon" href="images/Plate.png">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="js/google.fastbutton.js"></script>
@@ -11,21 +11,21 @@
  		<script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "transitions();">
+	<body onLoad = "transitions(); editLifestyles();">
 		<div id = "dashboard" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
 				<div class="top-bar">
-			  		<div class="top-container" style = "padding-top: 2px;"></div>
+			  		<div class="top-container empty"></div>
 			  		<div class="top-container">
 		        		<img id = "hold-the-word" src="images/top/Hold the... Word.png">
 			    	</div>
-				  	<div class="top-container" onClick="slideRight();">
+				  	<div class="top-container">
 			        	<img id = "profile-icon" class = "link slideleft" page-load = "profile" src="images/top/Profile.png">
 			    	</div>
 			    </div>
 			</div>
-			<div class = "content" style = "height: 575px;">
+			<div class = "content dashboard">
 				<div class = "welcome">
 					<h3>Hello Dale Lewis!</h3>
 					<h3>Let's create something tasty together!</h3>
@@ -69,10 +69,10 @@
 			  		<div class="top-container">
 		        		<h1>Profile</h1>
 			    	</div>
-			    	<div class="top-container" style = "padding-top: 2px;"></div>
+			    	<div class="top-container empty"></div>
 			    </div>
 			</div>
-			<div class = "content" style = "height: 460px;">
+			<div class = "content profile">
 				<div id = "profile-picture">
 					<img id = "dale" src = "images/top/Profile.png">
 				</div>
@@ -80,15 +80,14 @@
 					<label for = "name">Name</label>
 					<input type = "name" name = "name" value = "Dale Lewis">
 				</div>
-				<div class = "text-field" style = "margin-top: -1px">
+				<div class = "text-field overlap">
 					<label for = "email">Email</label>
 					<input type = "email" name = "email" value = "dale.lewis@gmail.com">
 				</div>
-				<div class = "text-field large" style = "margin-top: -1px">
+				<div id = "lifestyles-box" class = "text-field large overlap">
 					<label>Dietary Lifestyle</label>
-					<img id = "edit" src = "images/Edit.png">
-					<br/><br/>
-					<div class = "lifestyles">
+					<img id = "edit" src = "images/Edit.png" onClick = "editLifestyles();">
+					<div id = "lifestyles" class = "lifestyles">
 						<div class="lifestyle-container">
 				        	<img class = "lifestyle-image" src="images/lifestyles/vegetarian.png">
 				       		<h5>Vegetarian</h5>
@@ -107,12 +106,45 @@
 				    	</div>
 					</div>
 				</div>
+				<div id = "lifestyles-edit" class = "lifestyles-edit">
+					<h3>Common Lifestyles</h3>
+					<div class = "lifestyles edit">
+						<div class="lifestyle-container edit">
+				        	<img class = "lifestyle-image" src="images/lifestyles/gluten free unselected.png">
+				       		<h5>Gluten-Free</h5>
+				    	</div>
+				    	<div class="lifestyle-container edit">
+				        	<img class = "lifestyle-image" src="images/lifestyles/vegetarian.png">
+				       		<h5>Vegetarian</h5>
+				    	</div>
+				    	<div class="lifestyle-container edit">
+				        	<img class = "lifestyle-image" src="images/lifestyles/dairy free.png">
+				       		<h5>Dairy-Free</h5>
+				    	</div>
+				    </div>
+				    <h3>Specific Lifestyles</h3>
+				    <div class="input-container">
+						<img id = "none-icon" src = "images/lifestyles/None.png">
+					  	<input type = "text" name = "ingredient" placeholder = "Add Ingredient">
+					</div>
+				    <div class = "lifestyles special">
+				    	<div class="lifestyle-container special">
+				        	<img class = "lifestyle-image" src="images/lifestyles/none.png">
+				       		<h5>Tomatoes</h5>
+				    	</div>
+				    	<div class="lifestyle-container special">
+				        	<img class = "lifestyle-image" src="images/lifestyles/none.png">
+				       		<h5>Peppers</h5>
+				    	</div>
+			    	</div>
+			    	<button class = "submit green" type = "submit">SAVE</button>
+				</div>
 			</div>
 		</div>
 		<div class="tab-bar">
 			  <a href="dashboard.html"><div class="tab-container">
 		        	<img class = "tab-images" src="images/tab/Home - Green.png">
-		        	<h5 style = "color: #84ba4d;">Home</h5>
+		        	<h5 class = "highlight">Home</h5>
 		    	</div>
 		    	</a>
 			  <a href="recipes.html"><div class="tab-container">
