--- a/recipes.html
+++ b/recipes.html
@@ -30,7 +30,7 @@
 		    		</div>
 			    </div>
 			</div>
-			<div class = "content" style = "height: 620px;">
+			<div class = "content recipes-list">
 				<div class = "recipes">
 					<div class="recipe-container">
 			        	<img class = "recipe-image" src="images/recipes/Avocado Carbonara.png">
@@ -84,41 +84,41 @@
 		    		</a>
 			    </div>
 			</div>
-			<div class = "content" style = "height: 1155px;">
+			<div class = "content filters">
 				<div class = "cuisine">
 					<div class = "category">
 						<h1>CUISINE</h1>
 						<img class = "subtract" src = "images/Sub.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px; border-top: .5px solid #8C8C8C;">
+					<div class = "text-field header-conflict overlap">
 						<h1>American</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>BBQ</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Chinese</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Indian</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Japanese</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Korean</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Mexican</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px; margin-bottom: -1px">
+					<div class = "text-field overlap bottom-overlap">
 						<h1>Thai</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
@@ -128,35 +128,35 @@
 						<h1>MEAL TYPE</h1>
 						<img class = "subtract" src = "images/Sub.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px; border-top: .5px solid #8C8C8C;">
+					<div class = "text-field header-conflict overlap">
 						<h1>Appetizers</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Breakfast</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Desserts</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Dinner</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Lunch</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Salads</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px">
+					<div class = "text-field overlap">
 						<h1>Sides</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
-					<div class = "text-field" style = "margin-top: -1px; margin-bottom: -1px">
+					<div class = "text-field bottom-overlap overlap">
 						<h1>Snacks</h1>
 						<img class = "filter-check" src = "images/Check - Green.png">
 					</div>
@@ -168,12 +168,12 @@
 					</div>
 					<div class = "range">
 						<span class="slider">
-						  	<div id="left-people" class="slider-text" style = "text-align: right">2 people</div>
+						  	<div id="left-people" class="slider-text right-text-align">2 people</div>
 						  	<div id="serving-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -4px;"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -22px;"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
 							</div>
-						  	<div id="right-people" class="slider-text" style = "text-align: left">30 people</div>
+						  	<div id="right-people" class="slider-text left-text-align">30 people</div>
 						</span>
 					</div>
 				</div>
@@ -184,12 +184,12 @@
 					</div>
 					<div class = "range">
 						<span class="slider">
-						  	<div id="prep-left-mins" class="slider-text" style = "text-align: right">0 mins</div>
+						  	<div id="prep-left-mins" class="slider-text right-text-align">0 mins</div>
 						  	<div id="prep-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -4px;"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -22px;"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle custom-handle"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
 							</div>
-						  	<div id="prep-right-mins" class="slider-text" style = "text-align: left">60 mins</div>
+						  	<div id="prep-right-mins" class="slider-text left-text-align">60 mins</div>
 						</span>
 					</div>
 				</div>
@@ -200,12 +200,12 @@
 					</div>
 					<div class = "range">
 						<span class="slider">
-						  	<div id="cooking-left-mins" class="slider-text" style = "text-align: right">0 mins</div>
+						  	<div id="cooking-left-mins" class="slider-text right-text-align">0 mins</div>
 						  	<div id="cooking-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -4px;"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle" style = "margin-top: -22px;"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle custom-handle"></div>
+						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
 							</div>
-						  	<div id="cooking-right-mins" class="slider-text" style = "text-align: left">180 mins</div>
+						  	<div id="cooking-right-mins" class="slider-text left-text-align">180 mins</div>
 						</span>
 					</div>
 				</div>
@@ -221,7 +221,7 @@
 			  	<a href="recipes.html">
 			  		<div class="tab-container">
 		        		<img class = "tab-images" src="images/tab/Utensils - Green.png">
-			        	<h5 style = "color: #84ba4d;">Recipes</h5>
+			        	<h5 class = "highlight">Recipes</h5>
 			    	</div>
 			    </a>
 			  	<a href="saved.html">
