--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="js/google.fastbutton.js"></script>
  		<script src="js/jquery.google.fastbutton.js"></script>
- 		<script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
+ 		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
 	<body onLoad = "transitions(); editLifestyles();">
