--- a/recipes.html
+++ b/recipes.html
@@ -11,7 +11,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		<script src="js/google.fastbutton.js"></script>
  		<script src="js/jquery.google.fastbutton.js"></script>
- 		<script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
+ 		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
 	<body onLoad = "transitions(); sliders();">
