--- a/dashboard.html
+++ b/dashboard.html
@@ -124,7 +124,7 @@
 				    </div>
 				    <h3>Specific Lifestyles</h3>
 				    <div class="input-container">
-						<img id = "none-icon" src = "images/lifestyles/None.png">
+						<img id = "none-icon" src = "images/lifestyles/none.png">
 					  	<input type = "text" name = "ingredient" placeholder = "Add Ingredient">
 					</div>
 				    <div class = "lifestyles special">
