--- a/dashboard.html
+++ b/dashboard.html
@@ -5,13 +5,14 @@
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="js/google.fastbutton.js"></script>
  		<script src="js/jquery.google.fastbutton.js"></script>
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "transitions(); editLifestyles();">
+	<body onLoad = "transitions(); changeHearts(); selectLifestyles(); editLifestyles();">
 		<div id = "dashboard" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
@@ -36,7 +37,7 @@
 						<div class="recipe-container">
 				        	<img class = "recipe-image" src="images/recipes/Avocado Carbonara.png">
 				        	<img class = "heart-outline" src = "images/Outline Heart.png">
-				       		<h5>Avocado Carbonara</h5>
+				        	<h5>Avocado Carbonara</h5>
 				    	</div>
 				    	<div class="recipe-container">
 				        	<img class = "recipe-image" src="images/recipes/Carnitas Tacos.png">
@@ -85,8 +86,8 @@
 					<input type = "email" name = "email" value = "dale.lewis@gmail.com">
 				</div>
 				<div id = "lifestyles-box" class = "text-field large overlap">
-					<label>Dietary Lifestyle</label>
-					<img id = "edit" src = "images/Edit.png" onClick = "editLifestyles();">
+					<label>Dietary Lifestyles</label>
+					<img id = "edit" src = "images/Edit.png">
 					<div id = "lifestyles" class = "lifestyles">
 						<div class="lifestyle-container">
 				        	<img class = "lifestyle-image" src="images/lifestyles/vegetarian.png">
@@ -110,15 +111,15 @@
 					<h3>Common Lifestyles</h3>
 					<div class = "lifestyles edit">
 						<div class="lifestyle-container edit">
-				        	<img class = "lifestyle-image" src="images/lifestyles/gluten free unselected.png">
+				        	<img class = "lifestyle-image gluten-free-unselected" src="images/lifestyles/gluten free unselected.png">
 				       		<h5>Gluten-Free</h5>
 				    	</div>
 				    	<div class="lifestyle-container edit">
-				        	<img class = "lifestyle-image" src="images/lifestyles/vegetarian.png">
+				        	<img class = "lifestyle-image vegetarian-selected" src="images/lifestyles/vegetarian.png">
 				       		<h5>Vegetarian</h5>
 				    	</div>
 				    	<div class="lifestyle-container edit">
-				        	<img class = "lifestyle-image" src="images/lifestyles/dairy free.png">
+				        	<img class = "lifestyle-image dairy-free-selected" src="images/lifestyles/dairy free.png">
 				       		<h5>Dairy-Free</h5>
 				    	</div>
 				    </div>
@@ -129,11 +130,11 @@
 					</div>
 				    <div class = "lifestyles special">
 				    	<div class="lifestyle-container special">
-				        	<img class = "lifestyle-image" src="images/lifestyles/none.png">
+				        	<img class = "lifestyle-image none-selected" src="images/lifestyles/none.png">
 				       		<h5>Tomatoes</h5>
 				    	</div>
 				    	<div class="lifestyle-container special">
-				        	<img class = "lifestyle-image" src="images/lifestyles/none.png">
+				        	<img class = "lifestyle-image none-selected" src="images/lifestyles/none.png">
 				       		<h5>Peppers</h5>
 				    	</div>
 			    	</div>
