--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "transitions(); changeHearts(); selectLifestyles(); editLifestyles();">
+	<body>
 		<div id = "dashboard" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
